# SolFetc_rs

./: .gitignore  Cargo.toml
app/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
app/src/: app.rs  constants.rs  main.rs
app/src/components/: account_card.rs  batch_panel.rs  header.rs  mod.rs  scanner.rs  theme.rs  tx_status.rs
app/src/services/: mod.rs  rpc.rs  scanner.rs  transaction.rs  wallet.rs
app/src/types/: instruction.rs  mod.rs  token_account.rs
app/style/: tailwind.css
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
shared/: Cargo.toml
shared/src/: lib.rs
