[package]
name = "zera-app"
version.workspace = true
edition.workspace = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "console",
    "Headers", "Request", "RequestInit", "RequestMode",
    "Response",
] }
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = "0.5"
borsh = { version = "1.5", features = ["derive"] }
serde-wasm-bindgen = "0.6"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
zera-shared = { path = "../shared" }
